--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja de Bolos</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
-    <h1>Loja de Bolos</h1>
-    <h2>Melhores bolo da cidade</h2>
-    <hr>
-    <marquee>SEJA BEM VINDO / WELCOME </marquee>
+    <div class="site-todo">
+        <header class="cabecalho">
+            <img src="img/logo.png.png" alt="logo da loja">
+            <h1 class="titulo">
+                Bolo do Norton
+            </h1>
+        </header>
+
+    </div>
+
 </body>
+
 </html>
